--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo">Skiben Studio</div>
+            <a href="index.html"><img src="logo.png" alt="Skiben Studio Logo" class="logo"></a>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -51,19 +51,8 @@
             <a href="https://play.google.com/store/apps/details?id=com.skiben.kuromiwallpaperhd" class="download-btn">Download</a>
         </div>
 
-        <div class="app-item">
-            <img src="cinnamoroll-icon.png" alt="Cinnamoroll Wallpaper Icon" class="app-icon">
-            <h2>Cinnamoroll Wallpaper 4K HD</h2>
-            <a href="cinnamoroll-wallpaper.html">Learn More</a>
-            <a href="https://play.google.com/store/apps/details?id=com.skiben.cinnamorollwallpaperhd" class="download-btn">Download</a>
-        </div>
 
-        <div class="app-item">
-            <img src="ronaldo-icon.png" alt="Ronaldo Wallpaper Icon" class="app-icon">
-            <h2>Ronaldo Live Wallpaper 4K</h2>
-            <a href="ronaldo-wallpaper.html">Learn More</a>
-            <a href="https://play.google.com/store/apps/details?id=com.skiben.ronaldowallpaper" class="download-btn">Download</a>
-        </div>
+        
     </section>
 
     <footer>
