--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skiben Studio</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="google-site-verification" content="F6Ba5SrcyL7Da_UMenDi3unSoA0RH08lBErrvdJDNjQ" />
 </head>
 <body>
     <header>
